mds: reject lookup ino requests for mds dirs

Fixes: https://tracker.ceph.com/issues/49922
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 682a55e8a22a137f80855f2cdd98f6f230d67fce)